--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@webdeb/next-styles": "^1.0.8",
+    "bootstrap": "^4.4.1",
     "mongoose": "^5.9.9",
     "next": "9.3.5",
+    "node-sass": "^4.13.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "16.13.1",
+    "sass": "^1.26.3"
   }
 }
