--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "mongoose": "^5.9.9",
     "next": "9.3.5",
+    "node-fetch": "2.6.0",
     "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.0",
